src/objects/WeFormObject__c.object
<CustomObject>
    <fields>
        <fullName>ABA_Routing_Number__c</fullName>
        <description>The applicant&apos;s routing number</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter your ABA routing number</inlineHelpText>
        <label>ABA Routing Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address Line 2:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Gross_Revenue__c</fullName>
        <label>Annual Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>App_Req__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>App Req</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <formula>Opportunity__r.Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Request</label>
        <referenceTo>Application_Request__c</referenceTo>
        <relationshipLabel>WeFormsObjects</relationshipLabel>
        <relationshipName>WeFormsObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <formula>TEXT(Opportunity__r.Application_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Authorization information accepting liability, terms and conditions.</description>
        <label>Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorization_agreement_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signing the agreement</description>
        <label>Authorization agreement Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorize__c</fullName>
        <label>Authorize</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorized_officer__c</fullName>
        <description>Authorized officer must be one of the picklist values</description>
        <label>Authorized Officer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
                <value>
                    <fullName>Treasurer</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Avg_Monthly_Fuel_Service_Expenses__c</fullName>
        <label>Average Monthly Fuel/Service Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BOCA_Type__c</fullName>
        <formula>TEXT(Program__r.BOCA_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BOCA Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficial_Owner_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beneficial Owner Information</label>
        <referenceTo>Beneficial_Owner_Entity__c</referenceTo>
        <relationshipLabel>WeFormsObjects</relationshipLabel>
        <relationshipName>WeFormsObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Line_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Address Line 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Contact  First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Contact  Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <label>Billing Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily - 7-Day Terms</fullName>
                </value>
                <value>
                    <fullName>Prepay</fullName>
                </value>
                <value>
                    <fullName>Weekly -  0 Day Terms</fullName>
                </value>
                <value>
                    <fullName>Weekly - 1 Day Terms</fullName>
                </value>
                <value>
                    <fullName>Weekly - 2 Day Terms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Fax__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Mobile_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Mobile Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Mailing Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type Of Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Physical Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_fax__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Program_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign Program ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Usage_Type__c</fullName>
        <label>Card Usage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fuel, Fluids, Wash Only</fullName>
                </value>
                <value>
                    <fullName>Unrestricted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checking_Account_Number__c</fullName>
        <description>The applicant&apos;s checking account number</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter your checking account number</inlineHelpText>
        <label>Checking Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communications_Preference__c</fullName>
        <label>Language Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Legal Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Contact_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Confirmation Contact ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmation Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmation_Email_Template__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Confirmation Email Template</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Line_Requested__c</fullName>
        <label>Credit Line Requested</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DOT_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DOT #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>DOB of authorized officer/guarantor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Birth</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_of_Payment__c</fullName>
        <description>Day of payment for applicant</description>
        <inlineHelpText>Choose you day of payment</inlineHelpText>
        <label>Day of  Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disable_Fleet_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Fleet Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doing_Business_As__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Doing Business As</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Fuel_Volume_Litres__c</fullName>
        <label>Estimated Monthly Fuel Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Vehicle_Expenses__c</fullName>
        <label>Estimated Monthly Vehicle Expenses</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Sales_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External_Sales_Id</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FF #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Institution__c</fullName>
        <description>The name of the applicant&apos;s financial institution</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the name of your financial institution</inlineHelpText>
        <label>Financial Institution</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Starts__c</fullName>
        <label>Fiscal Year Starts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fleet_Size__c</fullName>
        <label>Number of Vehicles</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Annual_Income__c</fullName>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_this_offer__c</fullName>
        <label>How did you hear about this offer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Article in Publication</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Word of Mouth</fullName>
                </value>
                <value>
                    <fullName>Gas Station</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPAddress__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IPAddress</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Delivery_Method_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Delivery Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invoice_Delivery_Method__c</fullName>
        <label>Invoice Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                    <isActive>false</isActive>
                    <label>Fax</label>
                </value>
                <value>
                    <fullName>Mail</fullName>
                    <isActive>false</isActive>
                    <label>Mail</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_business_exempt_from_Motor_Fuels_Tax__c</fullName>
        <label>Is business exempt from Motor Fuels Tax?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>WeFormsObjects</relationshipLabel>
        <relationshipName>WeFormsObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Structure__c</fullName>
        <label>Legal Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bank/Bank Holding Co/Credit Union</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Corporation/Association</fullName>
                </value>
                <value>
                    <fullName>Federal/State/Local Government Agency or Authority</fullName>
                </value>
                <value>
                    <fullName>Insurance Company</fullName>
                </value>
                <value>
                    <fullName>Investment Company/Adviser</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Natural Person</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Non-Statutory Trust</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Public Accounting Firm</fullName>
                </value>
                <value>
                    <fullName>Public Company and Majority Owned Affiliate</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>Unincorporated Association</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC_FF_or_DOT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MC#, FF# or DOT#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MC #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Std_Neg_Fee__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Non Standard Negotiated Fees Approved</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Drivers__c</fullName>
        <label>Number Of Drivers</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Cards_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Number of Cards Requested</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTR_Account_Type__c</fullName>
        <label>OTR Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Line of Credit</fullName>
                </value>
                <value>
                    <fullName>Prepay</fullName>
                </value>
                <value>
                    <fullName>Open Line</fullName>
                    <isActive>false</isActive>
                    <label>Open Line</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTR_Day_Of_Payment__c</fullName>
        <label>Day Of Payment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Online_Application_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Online Application Offer</label>
        <referenceTo>OnlineApplicationOffer__c</referenceTo>
        <relationshipLabel>WeFormsObjects</relationshipLabel>
        <relationshipName>WeFormsObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Online_Application_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Online Application Status</label>
        <referenceTo>Online_Application_Status__c</referenceTo>
        <relationshipLabel>Online Applications</relationshipLabel>
        <relationshipName>WeFormsObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Online_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Online Application</label>
        <referenceTo>OnlineApplication__c</referenceTo>
        <relationshipLabel>WeFormsObjects</relationshipLabel>
        <relationshipName>WeFormsObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>WeFormsObjects</relationshipLabel>
        <relationshipName>WeFormsObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDF_Token__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDF Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Mobile_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Residential_City__c</fullName>
        <description>Residential City of authorized officer/guarantor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Residential City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Residential_Phone__c</fullName>
        <description>Residential Phone # of Authorized officer/guarantor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Residential Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>